--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="colorBox"></div>
       </div>
       <!-- JavaScript File -->
-      <script src="script.js"></script>
+      <script src="script.js" type="module"></script>
     </body>
   </body>
 </html>
